# bullet-rust-wasm

./: .gitignore  535.bundle.js  README.md  index.html  main.bundle.js  main.bundle.js.LICENSE.txt  netlify.toml  package-lock.json  package.json  webpack.config.ts
.github/workflows/: static.yml
src/: index.html  index.ts  sceneBuilder.ts
src/wasm_src/: Cargo.toml  build.rs
src/wasm_src/cpp_src/: CMakeLists.txt  lib.cpp  lib.h
src/wasm_src/cpp_src/BulletCollision/BroadphaseCollision/: btOverlappingPairCallback.h
src/wasm_src/cpp_wasm_std/: __config  cxa_guard_impl.h  cxxabi.h  math.h  new  stdint.h  stdlib.h  string  string.h  windows.h
src/wasm_src/src/: atomic.rs  guard.rs  lib.rs  math.rs
src/wasm_src/src/bind/: mod.rs  physics_world.rs
src/wasm_src/src/bt_bind/: constraint.rs  physics_world.rs
