[package]
name = "cpp-wasm-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3

# [profile.dev]
# opt-level = 3

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.91"
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version = "0.3.68"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3.41"

[build-dependencies]
cc = "1.0.86"
