[package]
name = "bullet-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3

# [profile.dev]
# opt-level = 3

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.91"
console_error_panic_hook = { version = "0.1.7", optional = true }
rayon = { version = "1.8.1" }
wasm-bindgen-rayon = { version = "1.2.1" }
thread-id = "4.2.1"
wasm_sync = "0.1.2"
parking_lot = "0.12.1"

[dependencies.web-sys]
version = "0.3.68"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3.41"

[build-dependencies]
cc = "1.0.86"
